src/objects/salsa_import_map__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Field map of Salsa Fields to Salsa Import Object Fields</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <defaultValue>&quot;String&quot;</defaultValue>
        <label>Data Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salsa_Import_Field__c</fullName>
        <label>Salsa Import Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salsa_Report_Field__c</fullName>
        <label>Salsa Report Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Salsa Import Map</label>
</CustomObject>